syntax = "proto3";

package com.johnchang;

import "google/protobuf/empty.proto";
option java_package = "com.johnchang";

option java_multiple_files = true;

enum Currency {
    POUNDS = 0;
}

message Payment {
  int64 amount = 1;
  Currency currency = 2;
  bytes initial_quantity = 3;
  string name = 4;
  uint32 decimal_units = 5;
  string symbol = 6;
}

message TransactionResponse {
    string block_hash = 1;
    string block_number = 2;
    string contract_address = 3;
    string transaction_hash = 5;
    string transaction_index = 6;
}

message TransferRequest {
    string contractAddress = 1;
    string to_account_id = 2;
    bytes value = 3;
}


